--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ events {
 http {
 
     upstream backend {
-      server app-server:9000;
+      server nextcloud_app.1.kpp2u2ho3z2pc4gk5evbl33gq:9000;
     }
 
 
@@ -94,7 +94,7 @@ http {
 
 	location ~* ^/ds-vpath/ {
 		rewrite /ds-vpath/(.*) /$1  break;
-                proxy_pass http://onlyoffice-document-server;
+                proxy_pass http://nextcloud_onlyoffice-document-server.1.7cbwky50a2n2kzhigynk2389s;
                 proxy_redirect     off;
 
                 client_max_body_size 100m;
