--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ events {
 http {
 
     upstream backend {
-      server nextcloud_app.1.kpp2u2ho3z2pc4gk5evbl33gq:9000;
+      server nextcloud_app:9000;
     }
 
 
