--- a/nginx.conf
+++ b/nginx.conf
@@ -94,7 +94,7 @@ http {
 
 	location ~* ^/ds-vpath/ {
 		rewrite /ds-vpath/(.*) /$1  break;
-                proxy_pass http://nextcloud_onlyoffice-document-server.1.7cbwky50a2n2kzhigynk2389s;
+                proxy_pass http://nextcloud_onlyoffice-document-server;
                 proxy_redirect     off;
 
                 client_max_body_size 100m;
