--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ events {
 http {
 
     upstream backend {
-      server nextcloud_app:9000;
+      server app:9000;
     }
 
 
@@ -94,7 +94,7 @@ http {
 
 	location ~* ^/ds-vpath/ {
 		rewrite /ds-vpath/(.*) /$1  break;
-                proxy_pass http://nextcloud_onlyoffice-document-server;
+                proxy_pass http://onlyoffice-document-server;
                 proxy_redirect     off;
 
                 client_max_body_size 100m;
